Fixes an alignment issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -41,13 +41,14 @@ body a { color: #ECD078;}
   margin: 0;
   overflow: hidden;
   vertical-align: top;
-  line-height: 1.5em;
+  line-height: 1.3;
   padding: 0;
   display: block;
 }
 
 .chat-view ul li {
   margin: 0;
+  line-height: 1.3;
   list-style: none;
   overflow: hidden;
   vertical-align: top;
@@ -81,7 +82,6 @@ body a { color: #ECD078;}
   padding-left: 10px;
   font-weight: normal;
   padding-bottom: 3px;
-  line-height: 1.3;
 }
 .chat-view .embed { margin-bottom: 0.5em; }
 .chat-view ul li b.msg.embed object { overflow: hidden; display: block; background: #000; padding: 5px; overflow: hidden; }
